Updated FullStack Resume

--- a/FullStack_Resume.tex
+++ b/FullStack_Resume.tex
@@ -53,11 +53,14 @@
 \resumeSubHeadingListStart
 
   \resumeProjectHeading
-    {https://github.com/190-785/Interactive_Resume_Maker}{Interactive Resume Maker (Frontend)}{April 2025 -- Present}
+    {https://github.com/190-785/Interactive-Resume-Maker}{Interactive Resume Maker}{April 2025 -- Present}
   \resumeItemListStart
     \resumeItem{Developed a dynamic resume editor using React and Tailwind CSS with real-time component editing.}
-    \resumeItem{Implemented drag-and-drop reordering and theme customization for UX personalization.}
-    \resumeItem{Integrated Puppeteer-based PDF export to generate polished printable versions.}
+    \resumeItem{Implemented drag-and-drop reordering and multi-section expansion for intuitive layout control.}
+    \resumeItem{Integrated Puppeteer-based PDF export to generate polished, print-ready resumes with custom headers and footers.}
+    \resumeItem{Implemented password-based authentication and secure REST endpoints in Node.js \& Express, using JWT tokens and MongoDB for user and resume storage.}
+    \resumeItem{Configured MongoDB Atlas for resume data persistence, enabling users to save and retrieve multiple resume versions.}
+    \resumeItem{Leveraged React Context API and Hooks for scalable state management and optimized load times with code-splitting.}
   \resumeItemListEnd
 
   \resumeProjectHeading
@@ -90,9 +93,9 @@
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in,label={}]
   \small{\item{
-    \textbf{Languages/Frameworks:} React.js, Next.js, TypeScript, Vue.js, Tailwind CSS, HTML5, JavaScript (ES6+), CSS3 \\
+    \textbf{Languages/Frameworks:} Java, React.js, Three.js, Next.js, TypeScript, Vue.js, Tailwind CSS, HTML5, JavaScript (ES6+), CSS3 \\
     \textbf{Backend:} Node.js, Express.js, REST APIs \\
-    \textbf{Databases:} Supabase, Firebase, MongoDB, PostgreSQL \\
+    \textbf{Databases:} MongoDB, Supabase, Firebase, PostgreSQL \\
     \textbf{Tools:} Git, Vercel, Docker, Puppeteer, BeautifulSoup
   }}
 \end{itemize}
