Add tailored resumes for multiple companies
Added new PDF and LaTeX resume files for Altan (Backend, Frontend, ML), Cisco, Google WebSolutions, TradeDesk, Upstok, and Webknot Technologies, each customized for specific roles and companies. Updated the generic resume with revised formatting, dates, and experience details to reflect recent work and improvements.

--- a/Updated_Resume/TradeDesk_Yash_Agarwal_Resume.tex
+++ b/Updated_Resume/TradeDesk_Yash_Agarwal_Resume.tex
@@ -50,7 +50,7 @@
 \newcommand{\resumeSubheading}[4]{
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-      \textbf{#1} & \textit{\small #2} \\ % Changed this line
+      \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
     \end{tabular*}\vspace{-7pt}
 }
@@ -84,7 +84,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Graphic Era Hill University}{Uttarakhand, India}
-      {B.Tech. in Computer Science \& Engineering; Honors in ML \& AI}{\textit{\small Aug 2023 -- Present}}
+      {B.Tech. in Computer Science \& Engineering; Honors in ML \& AI}{Aug 2023 -- July 2027 (Expected)}
   \resumeSubHeadingListEnd
 
 %---------- EXPERIENCE ----------
@@ -92,12 +92,12 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Web Developer Intern}{May 2025 -- July 2025}
-{\href{https://drive.google.com/file/d/1yUwuZXi9aFgvmFDl0UV3BKAaYXMIYn_a/view?usp=sharing}{Arterns Technologies Private Limited}}{Dehradun, Uttarakhand}
+      {\href{https://drive.google.com/file/d/1yUwuZXi9aFgvmFDl0UV3BKAaYXMIYn_a/view?usp=sharing}{Arterns Technologies Private Limited}}{Dehradun, Uttarakhand}
       \resumeItemListStart
-        \resumeItem{Engineered a full-stack Applicant Tracking System (ATS) and student assessment module for \href{https://menticate.com}{\textbf{menticate.com}}.}
+        \resumeItem{Owned the end-to-end development of a full-stack Applicant Tracking System (ATS) and student assessment module for \href{https://menticate.com}{\textbf{menticate.com}}.}
         \resumeItem{Integrated a real-time chat API and implemented a site-wide dark theme to enhance the user experience.}
         \resumeItem{Implemented the i18next library in the \href{https://vedichealings.com}{\textbf{vedichealings.com}} Next.js codebase, launching full Spanish language support.}
-        \resumeItem{Reduced project timeline overruns by 20\% by proactively identifying risks and implementing mitigation strategies in an Agile environment.}
+        \resumeItem{Reduced project timeline overruns by 20\% by proactively identifying risks and implementing mitigation strategies in a distributed, Agile environment.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -113,7 +113,7 @@
         \resumeItem{\textbf{Outcome:} Improved water conservation and plant health, achieving a 20\% increase in watering efficiency with a modular design for future upgrades.}
       \resumeItemListEnd
       
-      \resumeProjectHeading
+    \resumeProjectHeading
       {\textbf{\href{https://github.com/190-785/Interactive-Resume-Maker}{Interactive 3D Resume Builder}}}{Feb 2025 -- May 2025}
       \resumeItemListStart
         \resumeItem{\textbf{Tech Stack:} React, Three.js, MongoDB, Spring Boot, WebSockets}
@@ -136,7 +136,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, JavaScript, TypeScript, C++} \\
+     \textbf{Languages}{: Java, Python, JavaScript, TypeScript, C++, SQL} \\
+     \textbf{Core Concepts}{: Data Structures, Algorithms, Object-Oriented Programming (OOP)} \\
      \textbf{Frameworks}{: React, Next.js, Node.js, Flask, Spring Boot} \\
      \textbf{Databases \& Storage}{: MongoDB, Firebase, Redis} \\
      \textbf{Developer Tools}{: Git, Docker, BeautifulSoup, Postman} \\
@@ -147,7 +148,7 @@
 %---------- SOFT SKILLS ----------
 \section{Soft Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{Agile Collaboration, Problem-solving, Communication, Teamwork}}
+    \small{\item{Collaborative Problem-Solving, Agile Methodologies, Effective Communication, Teamwork, Adaptability}}
  \end{itemize}
 
 \end{document}
