Add tailored resumes for Amazon, Google, and Microsoft
Added new LaTeX and PDF resume files for Amazon SDE1, Google Software Applications Developer, and Microsoft Software Engineer roles. Updated generic resume to include direct LinkedIn and GitHub profile links for improved clarity.

--- a/Updated_Resume/Microsoft_SE_Yash_Agarwal_Resume.tex
+++ b/Updated_Resume/Microsoft_SE_Yash_Agarwal_Resume.tex
@@ -50,7 +50,7 @@
 \newcommand{\resumeSubheading}[4]{
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-      \textbf{#1} & \textit{\small #2} \\ % Changed this line
+      \textbf{#1} & \textit{\small #2} \\
       \textit{\small#3} & \textit{\small #4} \\
     \end{tabular*}\vspace{-7pt}
 }
@@ -84,7 +84,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Graphic Era Hill University}{Uttarakhand, India}
-      {B.Tech. in Computer Science \& Engineering; Honors in ML \& AI}{\textit{\small Aug 2023 -- Present}}
+      {B.Tech. in Computer Science \& Engineering; Honors in ML \& AI}{Expected Jul 2027}
   \resumeSubHeadingListEnd
 
 %---------- EXPERIENCE ----------
@@ -92,12 +92,12 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Web Developer Intern}{May 2025 -- July 2025}
-{\href{https://drive.google.com/file/d/1yUwuZXi9aFgvmFDl0UV3BKAaYXMIYn_a/view?usp=sharing}{Arterns Technologies Private Limited}}{Dehradun, Uttarakhand}
+      {\href{https://drive.google.com/file/d/1yUwuZXi9aFgvmFDl0UV3BKAaYXMIYn_a/view?usp=sharing}{Arterns Technologies Private Limited}}{Dehradun, Uttarakhand}
       \resumeItemListStart
-        \resumeItem{Engineered a full-stack Applicant Tracking System (ATS) and student assessment module for \href{https://menticate.com}{\textbf{menticate.com}}.}
-        \resumeItem{Integrated a real-time chat API and implemented a site-wide dark theme to enhance the user experience.}
-        \resumeItem{Implemented the i18next library in the \href{https://vedichealings.com}{\textbf{vedichealings.com}} Next.js codebase, launching full Spanish language support.}
-        \resumeItem{Reduced project timeline overruns by 20\% by proactively identifying risks and implementing mitigation strategies in an Agile environment.}
+        \resumeItem{Designed and developed a full-stack Applicant Tracking System (ATS) to streamline student assessments, collaborating with stakeholders to determine user requirements for \href{https://menticate.com}{\textbf{menticate.com}}.}
+        \resumeItem{Enhanced user experience by integrating a real-time chat API and implementing a site-wide dark theme, demonstrating a passion for product quality and customer needs.}
+        \resumeItem{Drove internationalization efforts for \href{https://vedichealings.com}{\textbf{vedichealings.com}} by implementing the i18next library, successfully launching full Spanish language support to expand user reach.}
+        \resumeItem{Improved project delivery efficiency by 20\% in a cooperative Agile team environment by proactively identifying project risks and implementing mitigation strategies.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -107,27 +107,27 @@
     \resumeProjectHeading
       {\textbf{\href{https://github.com/190-785/Plant_Watering_System}{IoT Automatic Plant Watering System}}}{Jun 2025 -- Jul 2025}
       \resumeItemListStart
-        \resumeItem{\textbf{Tech Stack:} ESP8266, Firebase, ESPAsyncWebServer, C++}
-        \resumeItem{Designed and built an autonomous system to monitor soil moisture and dispense water, fully integrated with a cloud backend for remote management.}
-        \resumeItem{Developed a secure web portal for Wi-Fi configuration and logged real-time telemetry data to Firebase using token-based authentication.}
+        \resumeItem{\textbf{Tech Stack:} C++, ESP8266, Firebase, ESPAsyncWebServer}
+        \resumeItem{Engineered an end-to-end IoT solution to solve the problem of inconsistent plant watering by designing an autonomous system with a cloud backend for remote management.}
+        \resumeItem{Developed a secure web portal for Wi-Fi configuration and logged real-time telemetry data to Firebase, demonstrating skill in building reliable and observable systems.}
         \resumeItem{\textbf{Outcome:} Improved water conservation and plant health, achieving a 20\% increase in watering efficiency with a modular design for future upgrades.}
       \resumeItemListEnd
       
-      \resumeProjectHeading
+    \resumeProjectHeading
       {\textbf{\href{https://github.com/190-785/Interactive-Resume-Maker}{Interactive 3D Resume Builder}}}{Feb 2025 -- May 2025}
       \resumeItemListStart
-        \resumeItem{\textbf{Tech Stack:} React, Three.js, MongoDB, Spring Boot, WebSockets}
-        \resumeItem{Architected a full-stack application to visualize resume data in an immersive 3D forest environment, offering a unique and engaging user interface.}
-        \resumeItem{Implemented secure JWT authentication, auto-save versioning, and real-time collaboration features using WebSockets to allow for seamless multi-user editing.}
-        \resumeItem{\textbf{Outcome:} Delivered a highly interactive and personalized resume experience, increasing user engagement and providing a novel alternative to traditional formats.}
+        \resumeItem{\textbf{Tech Stack:} React, Three.js, Spring Boot (Java), MongoDB, WebSockets}
+        \resumeItem{Architected an innovative full-stack application to visualize resume data in an immersive 3D environment, applying creative engineering to solve the challenge of engaging user presentation.}
+        \resumeItem{Implemented secure JWT authentication and real-time collaboration features using WebSockets, allowing multiple users to edit seamlessly in a cooperative environment.}
+        \resumeItem{\textbf{Outcome:} Delivered a highly interactive and personalized resume experience, providing a novel and engaging alternative to traditional formats.}
       \resumeItemListEnd
       
     \resumeProjectHeading
       {\textbf{\href{https://github.com/190-785/First_Link_Backend}{Wikipedia Path Finder}}}{Oct 2024 -- Dec 2024}
       \resumeItemListStart
         \resumeItem{\textbf{Tech Stack:} Python, Flask, BeautifulSoup, Redis, MongoDB, Docker}
-        \resumeItem{Developed a backend service to trace the traversal path from a given Wikipedia page to the 'Philosophy' page by recursively clicking the first link, detecting loops and dead-ends.}
-        \resumeItem{Integrated Redis caching to store frequent paths and Docker for containerization, ensuring scalability and faster response times under load.}
+        \resumeItem{Applied graph traversal algorithms and object-oriented principles in Python to develop a backend service that traces paths on Wikipedia, efficiently handling cycles and dead-ends.}
+        \resumeItem{Ensured high availability and performance by integrating Redis for caching and containerizing the application with Docker, improving system reliability and efficiency at scale.}
         \resumeItem{\textbf{Outcome:} Optimized pathfinding and parsing runtime by approximately 80\%, significantly lowering infrastructure costs and improving user experience.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -136,18 +136,12 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, JavaScript, TypeScript, C++} \\
-     \textbf{Frameworks}{: React, Next.js, Node.js, Flask, Spring Boot} \\
-     \textbf{Databases \& Storage}{: MongoDB, Firebase, Redis} \\
-     \textbf{Developer Tools}{: Git, Docker, BeautifulSoup, Postman} \\
-     \textbf{Machine Learning}{: Matplotlib, scikit-learn, TensorFlow, Keras}
+     \textbf{Languages}{: Java, C++, Python, JavaScript, TypeScript} \\
+     \textbf{Frameworks}{: Spring Boot, React, Next.js, Node.js, Flask} \\
+     \textbf{Databases \& Caching}{: MongoDB, Firebase, Redis} \\
+     \textbf{Developer Tools \& Platforms}{: Git, Docker, Postman, BeautifulSoup} \\
+     \textbf{Machine Learning}{: TensorFlow, Keras, scikit-learn, Matplotlib}
     }}
- \end{itemize}
-
-%---------- SOFT SKILLS ----------
-\section{Soft Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{Agile Collaboration, Problem-solving, Communication, Teamwork}}
  \end{itemize}
 
 \end{document}
